Updated AttributeOccurrenceValidator Plugin

--- a/src/column/validation/impl/context/ValidationContext.properties
+++ b/src/column/validation/impl/context/ValidationContext.properties
@@ -27,3 +27,23 @@ name = name
 type = type
 min = minOccurs
 max = maxOccurs
+
+#AttributeCountValidator
+attribute.count.validator.title = Attribute Count Validator Plugin
+attribute.count.validator.criterion = Number of Attributes: 
+attribute.count.validator.passed = \ (OK)
+attribute.count.validator.failed = \ (Failed)
+attribute.count.validator.test.passed = Attribute Count Validation successfully passed
+attribute.count.validator.test.failed = Attribute Count Validation failed
+attribute.count.validator.end = ----
+
+#AttributeOccurenceValidator
+attribute.occurrence.validator.title = Attribute Occurrence Validator Plugin
+attribute.occurrence.validator.criterion = Number of Attributes:
+attribute.occurrence.validator.nullable = nullable\=
+attribute.occurrence.validator.min.occurs = minOccurs\=
+attribute.occurrence.validator.passed = \ (OK)
+attribute.occurrence.validator.failed = \ (Failed)
+attribute.occurrence.validator.test.passed = Attribute Count Validation successfully passed
+attribute.occurrence.validator.test.failed = Attribute Count Validation failed
+attribute.occurrence.validator.end = ----
