--- a/src/column/validation/impl/context/ValidationContext.properties
+++ b/src/column/validation/impl/context/ValidationContext.properties
@@ -39,7 +39,6 @@ attribute.count.validator.end = ----
 
 #AttributeOccurenceValidator
 attribute.occurrence.validator.title = Attribute Occurrence Validator Plugin
-attribute.occurrence.validator.criterion = Number of Attributes:
 attribute.occurrence.validator.nullable = nullable\=
 attribute.occurrence.validator.min.occurs = minOccurs\=
 attribute.occurrence.validator.passed = \ (OK)
@@ -47,3 +46,28 @@ attribute.occurrence.validator.failed = \ (Failed)
 attribute.occurrence.validator.test.passed = Attribute Count Validation successfully passed
 attribute.occurrence.validator.test.failed = Attribute Count Validation failed
 attribute.occurrence.validator.end = ----
+
+#AttributeTypeValidator
+INTEGER=xs:integer
+CHARACTER\ VARYING=xs:string
+CHARACTER\ LARGE\ OBJECT=clobType
+BINARY\ LARGE\ OBJECT=blobType
+TIMESTAMP=xs:dateTime
+NUMERIC=xs:decimal
+SMALLINT=xs:integer
+FLOAT=xs:float
+BIT=xs:boolean
+attribute.type.validator.title = Attribute Type Validator Plugin
+attribute.type.validator.passed = \ (OK)
+attribute.type.validator.failed = \ (Failed)
+attribute.type.validator.test.passed = Attribute Type Validation successfully passed
+attribute.type.validator.test.failed = Attribute Type Validation failed
+attribute.type.validator.end = ----
+
+
+
+
+
+
+
+
