Updated Attribute Type Validator

--- a/src/column/validation/impl/context/ValidationContext.properties
+++ b/src/column/validation/impl/context/ValidationContext.properties
@@ -58,6 +58,11 @@ SMALLINT=xs:integer
 FLOAT=xs:float
 BIT=xs:boolean
 attribute.type.validator.title = Attribute Type Validator Plugin
+attribute.type.validator.original.type = Original Type
+attribute.type.validator.original.type.delimiter = (
+attribute.type.validator.expected.type = Expected Type
+attribute.type.validator.defined.type = Defined Type
+attribute.type.validator.original.type = Original Type
 attribute.type.validator.passed = \ (OK)
 attribute.type.validator.failed = \ (Failed)
 attribute.type.validator.test.passed = Attribute Type Validation successfully passed
