Updated all validator plugin

--- a/src/column/validation/impl/context/ValidationContext.properties
+++ b/src/column/validation/impl/context/ValidationContext.properties
@@ -43,8 +43,8 @@ attribute.occurrence.validator.nullable = nullable\=
 attribute.occurrence.validator.min.occurs = minOccurs\=
 attribute.occurrence.validator.passed = \ (OK)
 attribute.occurrence.validator.failed = \ (Failed)
-attribute.occurrence.validator.test.passed = Attribute Count Validation successfully passed
-attribute.occurrence.validator.test.failed = Attribute Count Validation failed
+attribute.occurrence.validator.test.passed = Attribute Occurrence Validation successfully passed
+attribute.occurrence.validator.test.failed = Attribute Occurrence Validation failed
 attribute.occurrence.validator.end = ----
 
 #AttributeTypeValidator
@@ -68,6 +68,15 @@ attribute.type.validator.failed = \ (Failed)
 attribute.type.validator.test.passed = Attribute Type Validation successfully passed
 attribute.type.validator.test.failed = Attribute Type Validation failed
 attribute.type.validator.end = ----
+
+#AttributeSequenceValidator
+attribute.sequence.validator.title = Attribute Sequence Validator Plugin
+attribute.sequence.validator.original.type.delimiter = (
+attribute.sequence.validator.passed = \ (OK)
+attribute.sequence.validator.failed = \ (Failed)
+attribute.sequence.validator.test.passed = Attribute Sequence Validation successfully passed
+attribute.sequence.validator.test.failed = Attribute Sequence Validation failed
+attribute.sequence.validator.end = ----
 
 
 
